change in photos

--- a/index.html
+++ b/index.html
@@ -130,12 +130,13 @@
 
   <div class="slider-container">
     <p class="heading h1 text-black text-center">Gallery</p>
-    <div class="row">
-      <div class="col-md-12 heroSlider-fixed">
-        <div class="overlay">
-        </div>
+    <div class="slider">
+      <div class="slider-wrapper">
+        <button id="prev-slide" class="slide-button material-symbols-rounded">
+          chevron_left
+        </button>
         <!-- Slider -->
-        <div class="slider responsive">
+        <div class="responsive slider">
           <div class="img-list">
             <img class="img-item" src="assests/img/GV.webp" alt="" />
           </div>
@@ -161,14 +162,16 @@
             <img class="img-item" src="assests/img/GV.webp" alt="" />
           </div>
         </div>
+        <a href="/assests/pages/gallery.html"><button id="next-slide"
+          class="slide-button material-symbols-rounded">chevron_right</button></a>
 
-        <!-- control arrows -->
+        <!-- control arrows
         <div class="prev-btn">
           <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
         </div>
         <div class="next-btn">
           <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        </div>
+        </div> -->
 
       </div>
     </div>
