--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     </div>
   </div>
 
-  <div class="booking">
+  <div class="booking py-5">
     <div class="container">
       <P class="heading h1">Get Your Pass Now</P>
       <div class="booking-contain d-lg-flex d-md-flex d-sm-block gap-4">
@@ -128,8 +128,8 @@
     </div>
   </div>
 
-  <div class="slider-container">   
-    <p class="heading h1 text-black text-center">Gallery</p>
+  <div class="slider-container py-5">   
+    <p class="heading h1 text-white text-center">Gallery</p>
     <div class="slider">
       <div class="slider-wrapper">
         <button id="prev-slide" class="slide-button material-symbols-rounded">
@@ -138,28 +138,28 @@
         <!-- Slider -->
         <div class="responsive slider">
           <div class="img-list">
-            <img class="img-item" src="assests/img/GV.webp" alt="" />
+            <img class="img-item rounded-4 " src="assests/img/GV.webp" alt="" />
           </div>
           <div class="img-list">
-            <img class="img-item" src="assests/img/GV.webp" alt="" />
+            <img class="img-item rounded-4" src="assests/img/GV.webp" alt="" />
           </div>
           <div class="img-list">
-            <img class="img-item" src="assests/img/GV.webp" alt="" />
+            <img class="img-item rounded-4" src="assests/img/GV.webp" alt="" />
           </div>
           <div class="img-list">
-            <img class="img-item" src="assests/img/GV.webp" alt="" />
+            <img class="img-item rounded-4" src="assests/img/GV.webp" alt="" />
           </div>
           <div class="img-list">
-            <img class="img-item" src="assests/img/GV.webp" alt="" />
+            <img class="img-item rounded-4" src="assests/img/GV.webp" alt="" />
           </div>
           <div class="img-list">
-            <img class="img-item" src="assests/img/GV.webp" alt="" />
+            <img class="img-item rounded-4" src="assests/img/GV.webp" alt="" />
           </div>
           <div class="img-list">
-            <img class="img-item" src="assests/img/GV.webp" alt="" />
+            <img class="img-item rounded-4" src="assests/img/GV.webp" alt="" />
           </div>
           <div class="img-list">
-            <img class="img-item" src="assests/img/GV.webp" alt="" />
+            <img class="img-item rounded-4" src="assests/img/GV.webp" alt="" />
           </div>
         </div>
         <a href="/assests/pages/gallery.html"><button id="next-slide"
@@ -177,8 +177,8 @@
     </div>
   </div>
 
-  <div class="slider-container2">
-    <p class="heading h1 text-black text-centre">Videos</p>
+  <div class="slider-container2 py-5">
+    <p class="heading h1 text-white text-centre">Videos</p>
     <div class="slider">
       <div class="slider-wrapper">
         <button id="prev-slide" class="slide-button material-symbols-rounded">
@@ -186,28 +186,28 @@
         </button>
         <div class="slider responsive">
           <div class="img-list">
-            <img class="img-item" src="assests/img/GV.webp" alt="" />
+            <img class="img-item rounded-4" src="assests/img/GV.webp" alt="" />
           </div>
           <div class="img-list">
-            <img class="img-item" src="assests/img/GV.webp" alt="" />
+            <img class="img-item rounded-4" src="assests/img/GV.webp" alt="" />
           </div>
           <div class="img-list">
-            <img class="img-item" src="assests/img/GV.webp" alt="" />
+            <img class="img-item rounded-4" src="assests/img/GV.webp" alt="" />
           </div>
           <div class="img-list">
-            <img class="img-item" src="assests/img/GV.webp" alt="" />
+            <img class="img-item rounded-4" src="assests/img/GV.webp" alt="" />
           </div>
           <div class="img-list">
-            <img class="img-item" src="assests/img/GV.webp" alt="" />
+            <img class="img-item rounded-4" src="assests/img/GV.webp" alt="" />
           </div>
           <div class="img-list">
-            <img class="img-item" src="assests/img/GV.webp" alt="" />
+            <img class="img-item rounded-4" src="assests/img/GV.webp" alt="" />
           </div>
           <div class="img-list">
-            <img class="img-item" src="assests/img/GV.webp" alt="" />
+            <img class="img-item rounded-4" src="assests/img/GV.webp" alt="" />
           </div>
           <div class="img-list">
-            <img class="img-item" src="assests/img/GV.webp" alt="" />
+            <img class="img-item rounded-4" src="assests/img/GV.webp" alt="" />
           </div>
         </div>
         <a href="/assests/pages/gallery.html"><button id="next-slide"
