--- a/assests/pages/sponsors.html
+++ b/assests/pages/sponsors.html
@@ -48,9 +48,9 @@
                         <a class="nav-link active" aria-current="page" href="/assests/pages/sponsors.html">SPONSORS</a>
                     </li>
                 </ul>
-                <button class="button type1" onclick="location.href='/assests/pages/booking.html'">
-                    <span class="btn-txt">Get Tickets</span>
-                </button>
+                <a class="button type1 me-auto" href='/assests/pages/booking.html'>
+                    <span class="btn-txt">Get Pass</span>
+                  </a>
             </div>
         </div>
     </nav>
