--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
             <a class="nav-link" href="assests/pages/sponsors.html">SPONSORS</a>
           </li>
         </ul>
-        <button class="button type1" onclick="location.href='/assests/pages/booking.html'">
-          <span class="btn-txt">Get Tickets</span>
-        </button>
+        <a class="button type1 me-auto" href='assests/pages/booking.html'>
+          <span class="btn-txt">Get Pass</span>
+        </a>
       </div>
     </div>
   </nav>
@@ -119,10 +119,10 @@
           <p>Experience Garba like never before! Our AC Dome provides the perfect setting for a night of dance, music,
             and celebration. Get your Passes today!
           </p>
-          <button class="bookbtn col-12 position-relative bottom-0 start-50 translate-middle-x rounded-5"
-            onclick="location.href='/assests/pages/booking.html'" type="button">
+          <a class="bookbtn col-12 position-relative bottom-0 start-50 translate-middle-x rounded-5"
+            href='assests/pages/booking.html' type="button">
             Book Now
-          </button>
+          </a>
         </div>
       </div>
     </div>
