--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
     </div>
   </div>
 
+  <div class="container-background">
   <div class="time-wrapper">
     <div class="time-content col-lg-8 col-md-9 col-11 p-lg-5 p-md-5 p-sm-3 p-2 rounded-5">
       <h1 class="heading">WE ARE COMING SOON</h1>
@@ -103,8 +104,8 @@
   <div class="video">
     <div class="container">
       <P class="heading h1">Our A.C. Dome Concept</P>
-      <video class="col-12 col-lg-10 position-relative top-0 start-50 translate-middle-x p-3 rounded-5"
-        src="/assests/video/model.MP4" autoplay muted loop>
+      <video class="col-12 position-relative top-0 start-50 translate-middle-x p-3 rounded-5"
+        src="/assests/video/model.MP4" autoplay loop controls>
     </div>
   </div>
 
@@ -128,7 +129,7 @@
     </div>
   </div>
 
-  <div class="slider-container py-5">   
+  <div class="slider-container py-4">   
     <p class="heading h1 text-white text-center">Gallery</p>
     <div class="slider">
       <div class="slider-wrapper">
@@ -136,7 +137,7 @@
           chevron_left
         </button>
         <!-- Slider -->
-        <div class="responsive slider">
+        <div class="responsive slider p-5">
           <div class="img-list">
             <img class="img-item rounded-4 " src="assests/img/GV.webp" alt="" />
           </div>
@@ -177,14 +178,14 @@
     </div>
   </div>
 
-  <div class="slider-container2 py-5">
+  <div class="slider-container2 py-4">
     <p class="heading h1 text-white text-centre">Videos</p>
     <div class="slider">
       <div class="slider-wrapper">
         <button id="prev-slide" class="slide-button material-symbols-rounded">
           chevron_left
         </button>
-        <div class="slider responsive">
+        <div class="slider responsive p-5">
           <div class="img-list">
             <img class="img-item rounded-4" src="assests/img/GV.webp" alt="" />
           </div>
@@ -215,6 +216,9 @@
       </div>
     </div>
   </div>
+
+</div>
+
   <footer>
     <div class="content">
       <div class="top">
