--- a/index.html
+++ b/index.html
@@ -185,29 +185,29 @@
         <button id="prev-slide" class="slide-button material-symbols-rounded">
           chevron_left
         </button>
-        <div class="slider responsive p-5">
-          <div class="img-list">
+        <div class="slider responsive row p-5">
+          <div class="img-list col-3 col-lg-3 col-md-3 col-sm-3">
             <img class="img-item rounded-4" src="assests/img/GV.webp" alt="" />
           </div>
-          <div class="img-list">
+          <div class="img-list col-3 col-lg-3 col-md-3 col-sm-3">
             <img class="img-item rounded-4" src="assests/img/GV.webp" alt="" />
           </div>
-          <div class="img-list">
+          <div class="img-list col-3 col-lg-3 col-md-3 col-sm-3">
             <img class="img-item rounded-4" src="assests/img/GV.webp" alt="" />
           </div>
-          <div class="img-list">
+          <div class="img-list col-3 col-lg-3 col-md-3 col-sm-3">
             <img class="img-item rounded-4" src="assests/img/GV.webp" alt="" />
           </div>
-          <div class="img-list">
+          <div class="img-list col-3 col-lg-3 col-md-3 col-sm-3">
             <img class="img-item rounded-4" src="assests/img/GV.webp" alt="" />
           </div>
-          <div class="img-list">
+          <div class="img-list col-3 col-lg-3 col-md-3 col-sm-3">
             <img class="img-item rounded-4" src="assests/img/GV.webp" alt="" />
           </div>
-          <div class="img-list">
+          <div class="img-list col-3 col-lg-3 col-md-3 col-sm-3">
             <img class="img-item rounded-4" src="assests/img/GV.webp" alt="" />
           </div>
-          <div class="img-list">
+          <div class="img-list col-3 col-lg-3 col-md-3 col-sm-3">
             <img class="img-item rounded-4" src="assests/img/GV.webp" alt="" />
           </div>
         </div>
