--- a/assests/pages/gallery.html
+++ b/assests/pages/gallery.html
@@ -93,6 +93,15 @@
           <img src="/assests/img/gb2.jpeg">
           <img src="/assests/img/gb7.jpeg">
         </div>
+        <div class="column">
+          <img src="/assests/img/gb8.jpeg">
+          <img src="/assests/img/gb3.jpeg">
+          <img src="/assests/img/gb5.jpeg">
+          <img src="/assests/img/gb2.jpeg">
+          <img src="/assests/img/gb7.jpeg">
+          <img src="/assests/img/gb4.jpeg">
+          <img src="/assests/img/gb6.jpeg">
+        </div>
       </div>
   </div>
 </div>
