--- a/assests/pages/gallery.html
+++ b/assests/pages/gallery.html
@@ -65,7 +65,7 @@
   </div>
     <div class="card"> 
       <div class="grid-img">
-        <div class="column">
+        <div class="column gallery">
           <img src="/assests/img/gb8.jpeg">
           <img src="/assests/img/gb2.jpeg">
           <img src="/assests/img/gb3.jpeg">
@@ -75,7 +75,7 @@
           <img src="/assests/img/gb7.jpeg">
           <img src="/assests/img/gb2.jpeg">
         </div>
-        <div class="column">
+        <div class="column gallery">
           <img src="/assests/img/gb3.jpeg">
           <img src="/assests/img/gb8.jpeg">
           <img src="/assests/img/gb2.jpeg">
@@ -84,7 +84,7 @@
           <img src="/assests/img/gb4.jpeg">
           <img src="/assests/img/gb6.jpeg">
         </div>
-        <div class="column">
+        <div class="column gallery">
           <img src="/assests/img/gb3.jpeg">
           <img src="/assests/img/gb4.jpeg">
           <img src="/assests/img/gb8.jpeg">
@@ -93,7 +93,7 @@
           <img src="/assests/img/gb2.jpeg">
           <img src="/assests/img/gb7.jpeg">
         </div>
-        <div class="column">
+        <div class="column gallery">
           <img src="/assests/img/gb8.jpeg">
           <img src="/assests/img/gb3.jpeg">
           <img src="/assests/img/gb5.jpeg">
@@ -104,6 +104,7 @@
         </div>
       </div>
   </div>
+  <div id="fullpage" onclick="this.style.display='none';"></div>
 </div>
   <!-- ----------------------------------------footer------------------------------------------ -->
   <footer>
@@ -127,7 +128,7 @@
   </footer>
   <!-- ---------------------------------------------------------------------------------------- -->
   <!-- -------------------------------------------------------------------------------------------- -->
-  <script src="/assests/javascript/about.js"></script>
+  <script src="/assests/javascript/gallery.js"></script>
 
   <!-- bootstrap-script -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
