--- a/index.html
+++ b/index.html
@@ -139,31 +139,31 @@
         <!-- Slider -->
         <div class="responsive slider p-5">
           <div class="img-list">
-            <img class="img-item rounded-4 " src="assests/img/GV.webp" alt="" />
+            <img class="img-item rounded-4 " src="assests/img/Screenshot 2024-06-12 132022.png" alt="" />
           </div>
           <div class="img-list">
-            <img class="img-item rounded-4" src="assests/img/GV.webp" alt="" />
+            <img class="img-item rounded-4" src="assests/img/Screenshot 2024-06-12 132045.png" alt="" />
           </div>
           <div class="img-list">
-            <img class="img-item rounded-4" src="assests/img/GV.webp" alt="" />
+            <img class="img-item rounded-4" src="assests/img/Screenshot 2024-06-12 132139.png" alt="" />
           </div>
           <div class="img-list">
-            <img class="img-item rounded-4" src="assests/img/GV.webp" alt="" />
+            <img class="img-item rounded-4" src="assests/img/Screenshot 2024-06-12 132206.png" alt="" />
           </div>
           <div class="img-list">
-            <img class="img-item rounded-4" src="assests/img/GV.webp" alt="" />
+            <img class="img-item rounded-4" src="assests/img/Screenshot 2024-06-12 132312.png" alt="" />
           </div>
           <div class="img-list">
-            <img class="img-item rounded-4" src="assests/img/GV.webp" alt="" />
+            <img class="img-item rounded-4" src="assests/img/Screenshot 2024-06-12 132330.png" alt="" />
           </div>
           <div class="img-list">
-            <img class="img-item rounded-4" src="assests/img/GV.webp" alt="" />
+            <img class="img-item rounded-4" src="assests/img/Screenshot 2024-06-12 132433.png" alt="" />
           </div>
           <div class="img-list">
-            <img class="img-item rounded-4" src="assests/img/GV.webp" alt="" />
+            <img class="img-item rounded-4" src="assests/img/Screenshot 2024-06-12 132504.png" alt="" />
           </div>
         </div>
-        <a href="/assests/pages/gallery.html"><button id="next-slide"
+        <a href="assests/pages/gallery.html"><button id="next-slide"
           class="slide-button material-symbols-rounded">chevron_right</button></a>
 
         <!-- control arrows
@@ -211,7 +211,7 @@
             <img class="img-item rounded-4" src="assests/img/GV.webp" alt="" />
           </div>
         </div>
-        <a href="/assests/pages/gallery.html"><button id="next-slide"
+        <a href="assests/pages/gallery.html"><button id="next-slide"
             class="slide-button material-symbols-rounded">chevron_right</button></a>
       </div>
     </div>
