--- a/assests/pages/gallery.html
+++ b/assests/pages/gallery.html
@@ -66,41 +66,59 @@
     <div class="card"> 
       <div class="grid-img">
         <div class="column gallery">
-          <img src="/assests/img/gb8.jpeg">
-          <img src="/assests/img/gb2.jpeg">
-          <img src="/assests/img/gb3.jpeg">
-          <img src="/assests/img/gb4.jpeg">
-          <img src="/assests/img/gb5.jpeg">
-          <img src="/assests/img/gb6.jpeg">
-          <img src="/assests/img/gb7.jpeg">
-          <img src="/assests/img/gb2.jpeg">
+          <img src="/assests/img/Screenshot 2024-06-12 144519.png">
+          <img src="/assests/img/Screenshot 2024-06-12 144922.png">
+          <img src="/assests/img/Screenshot 2024-06-12 144201.png">
+          <img src="/assests/img/Screenshot 2024-06-12 132022.png">
+          <img src="/assests/img/Screenshot 2024-06-12 132045.png">
+          <img src="/assests/img/Screenshot 2024-06-12 132139.png">
+          <img src="/assests/img/Screenshot 2024-06-12 132206.png">
+          <img src="/assests/img/Screenshot 2024-06-12 132312.png">
+          <img src="/assests/img/Screenshot 2024-06-12 133844.png">
+          <img src="/assests/img/Screenshot 2024-06-12 133858.png">
+          <img src="/assests/img/Screenshot 2024-06-12 133922.png">
+          <img src="/assests/img/Screenshot 2024-06-12 143725.png">
+          <img src="/assests/img/Screenshot 2024-06-12 143744.png">
+          <img src="/assests/img/Screenshot 2024-06-12 144004.png">
         </div>
         <div class="column gallery">
-          <img src="/assests/img/gb3.jpeg">
-          <img src="/assests/img/gb8.jpeg">
-          <img src="/assests/img/gb2.jpeg">
-          <img src="/assests/img/gb7.jpeg">
-          <img src="/assests/img/gb5.jpeg">
-          <img src="/assests/img/gb4.jpeg">
-          <img src="/assests/img/gb6.jpeg">
+          <img src="/assests/img/Screenshot 2024-06-12 132433.png">
+          <img src="/assests/img/Screenshot 2024-06-12 132330.png">
+          <img src="/assests/img/Screenshot 2024-06-12 132504.png">
+          <img src="/assests/img/Screenshot 2024-06-12 132536.png">
+          <img src="/assests/img/Screenshot 2024-06-12 132701.png">
+          <img src="/assests/img/Screenshot 2024-06-12 132746.png">
+          <img src="/assests/img/Screenshot 2024-06-12 132828.png">
+          <img src="/assests/img/Screenshot 2024-06-12 134017.png">
+          <img src="/assests/img/Screenshot 2024-06-12 134034.png">
+          <img src="/assests/img/Screenshot 2024-06-12 134105.png">
+          <img src="/assests/img/Screenshot 2024-06-12 144023.png">
         </div>
         <div class="column gallery">
-          <img src="/assests/img/gb3.jpeg">
-          <img src="/assests/img/gb4.jpeg">
-          <img src="/assests/img/gb8.jpeg">
-          <img src="/assests/img/gb5.jpeg">
-          <img src="/assests/img/gb6.jpeg">
-          <img src="/assests/img/gb2.jpeg">
-          <img src="/assests/img/gb7.jpeg">
+          <img src="/assests/img/Screenshot 2024-06-12 133025.png">
+          <img src="/assests/img/Screenshot 2024-06-12 133048.png">
+          <img src="/assests/img/Screenshot 2024-06-12 133135.png">
+          <img src="/assests/img/Screenshot 2024-06-12 133159.png">
+          <img src="/assests/img/Screenshot 2024-06-12 133221.png">
+          <img src="/assests/img/Screenshot 2024-06-12 133243.png">
+          <img src="/assests/img/Screenshot 2024-06-12 133303.png">
+          <img src="/assests/img/Screenshot 2024-06-12 134126.png">
+          <img src="/assests/img/Screenshot 2024-06-12 135619.png">
+          <img src="/assests/img/Screenshot 2024-06-12 135648.png">
+          <img src="/assests/img/Screenshot 2024-06-12 144049.png">
+          <img src="/assests/img/Screenshot 2024-06-12 144141.png">
         </div>
         <div class="column gallery">
-          <img src="/assests/img/gb8.jpeg">
-          <img src="/assests/img/gb3.jpeg">
-          <img src="/assests/img/gb5.jpeg">
-          <img src="/assests/img/gb2.jpeg">
-          <img src="/assests/img/gb7.jpeg">
-          <img src="/assests/img/gb4.jpeg">
-          <img src="/assests/img/gb6.jpeg">
+          <img src="/assests/img/Screenshot 2024-06-12 133405.png">
+          <img src="/assests/img/Screenshot 2024-06-12 133505.png">
+          <img src="/assests/img/Screenshot 2024-06-12 133546.png">
+          <img src="/assests/img/Screenshot 2024-06-12 133627.png">
+          <img src="/assests/img/Screenshot 2024-06-12 133658.png">
+          <img src="/assests/img/Screenshot 2024-06-12 133734.png">
+          <img src="/assests/img/Screenshot 2024-06-12 133819.png">
+          <img src="/assests/img/Screenshot 2024-06-12 135708.png">
+          <img src="/assests/img/Screenshot 2024-06-12 135841.png">
+          <img src="/assests/img/Screenshot 2024-06-12 135857.png">
         </div>
       </div>
   </div>
