--- a/index.html
+++ b/index.html
@@ -228,53 +228,35 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <div class="row justify-content-center p-5">
-                    <div class="col-6 col-sm-6 col-md-3 mb-3">
-                        <img class="img-item rounded-4" src="assests/img/GV.webp" alt="First slide">
+                <div class="slide justify-content-center p-5">
+                    <div class="col-3 col-sm-6 col-md-3 mb-3">
+                        <img class="col-12 img-item rounded-4" src="assests/img/GV.webp" alt="First slide">
                     </div>
-                    <div class="col-6 col-sm-6 col-md-3 mb-3">
-                        <img class="img-item rounded-4" src="assests/img/GV.webp" alt="First slide">
+                    <div class="col-3 col-sm-6 col-md-3 mb-3">
+                        <img class="col-12 img-item rounded-4" src="assests/img/GV.webp" alt="First slide">
                     </div>
-                    <div class="col-6 col-sm-6 col-md-3 mb-3">
-                        <img class="img-item rounded-4" src="assests/img/GV.webp" alt="First slide">
+                    <div class="col-3 col-sm-6 col-md-3 mb-3">
+                        <img class="col-12 img-item rounded-4" src="assests/img/GV.webp" alt="First slide">
                     </div>
-                    <div class="col-6 col-sm-6 col-md-3 mb-3">
-                        <img class="img-item rounded-4" src="assests/img/GV.webp" alt="First slide">
+                    <div class="col-3 col-sm-6 col-md-3 mb-3">
+                        <img class="col-12 img-item rounded-4" src="assests/img/GV.webp" alt="First slide">
                     </div>
+                    <div class="col-3 col-sm-6 col-md-3 mb-3">
+                      <img class="imcol-12 g-item rounded-4" src="assests/img/GV.webp" alt="First slide">
+                  </div>
+                  <div class="col-3 col-sm-6 col-md-3 mb-3">
+                      <img class="col-12 img-item rounded-4" src="assests/img/GV.webp" alt="First slide">
+                  </div>
+                  <div class="col-3 col-sm-6 col-md-3 mb-3">
+                      <img class="col-12 img-item rounded-4" src="assests/img/GV.webp" alt="First slide">
+                  </div>
+                  <div class="col-3 col-sm-6 col-md-3 mb-3">
+                      <img class="col-12 img-item rounded-4" src="assests/img/GV.webp" alt="First slide">
+                  </div>
                 </div>
             </div>
-            <div class="carousel-item">
-                <div class="row justify-content-center p-5">
-                    <div class="col-6 col-sm-6 col-md-3 mb-3">
-                        <img class="img-item rounded-4" src="assests/img/GV.webp" alt="Second slide">
-                    </div>
-                    <div class="col-6 col-sm-6 col-md-3 mb-3">
-                        <img class="img-item rounded-4" src="assests/img/GV.webp" alt="Second slide">
-                    </div>
-                    <div class="col-6 col-sm-6 col-md-3 mb-3">
-                        <img class="img-item rounded-4" src="assests/img/GV.webp" alt="Second slide">
-                    </div>
-                    <div class="col-6 col-sm-6 col-md-3 mb-3">
-                        <img class="img-item rounded-4" src="assests/img/GV.webp" alt="Second slide">
-                    </div>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <div class="row justify-content-center p-5">
-                    <div class="col-6 col-sm-6 col-md-3 mb-3">
-                        <img class="img-item rounded-4" src="assests/img/GV.webp" alt="Third slide">
-                    </div>
-                    <div class="col-6 col-sm-6 col-md-3 mb-3">
-                        <img class="img-item rounded-4" src="assests/img/GV.webp" alt="Third slide">
-                    </div>
-                    <div class="col-6 col-sm-6 col-md-3 mb-3">
-                        <img class="img-item rounded-4" src="assests/img/GV.webp" alt="Third slide">
-                    </div>
-                    <div class="col-6 col-sm-6 col-md-3 mb-3">
-                        <img class="img-item rounded-4" src="assests/img/GV.webp" alt="Third slide">
-                    </div>
-                </div>
-            </div>
+            
+            
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
