--- a/index.html
+++ b/index.html
@@ -218,57 +218,74 @@
     </div>
   </div> -->
 
-  <div class="slider-container2 py-4">
+  <div class="slider-container2 container py-4">
     <p class="heading h1">Videos</p>
-    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        </div>
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <div class="slide justify-content-center p-5">
-                    <div class="col-3 col-sm-6 col-md-3 mb-3">
-                        <img class="col-12 img-item rounded-4" src="assests/img/GV.webp" alt="First slide">
+                <div class="row gap-0 row-gap-3 grid justify-content-center">
+                    <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                        <img class="img-item rounded-4" src="gb.jpg" alt="First slide">
                     </div>
-                    <div class="col-3 col-sm-6 col-md-3 mb-3">
-                        <img class="col-12 img-item rounded-4" src="assests/img/GV.webp" alt="First slide">
+                    <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                        <img class="img-item rounded-4" src="gb.jpg" alt="First slide">
                     </div>
-                    <div class="col-3 col-sm-6 col-md-3 mb-3">
-                        <img class="col-12 img-item rounded-4" src="assests/img/GV.webp" alt="First slide">
+                    <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                        <img class="img-item rounded-4" src="gb.jpg" alt="First slide">
                     </div>
-                    <div class="col-3 col-sm-6 col-md-3 mb-3">
-                        <img class="col-12 img-item rounded-4" src="assests/img/GV.webp" alt="First slide">
+                    <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                        <img class="img-item rounded-4" src="gb.jpg" alt="First slide">
                     </div>
-                    <div class="col-3 col-sm-6 col-md-3 mb-3">
-                      <img class="imcol-12 g-item rounded-4" src="assests/img/GV.webp" alt="First slide">
-                  </div>
-                  <div class="col-3 col-sm-6 col-md-3 mb-3">
-                      <img class="col-12 img-item rounded-4" src="assests/img/GV.webp" alt="First slide">
-                  </div>
-                  <div class="col-3 col-sm-6 col-md-3 mb-3">
-                      <img class="col-12 img-item rounded-4" src="assests/img/GV.webp" alt="First slide">
-                  </div>
-                  <div class="col-3 col-sm-6 col-md-3 mb-3">
-                      <img class="col-12 img-item rounded-4" src="assests/img/GV.webp" alt="First slide">
-                  </div>
                 </div>
             </div>
-            
-            
+            <div class="carousel-item">
+                <div class="row justify-content-center">
+                    <div class="col-6 col-sm-6 col-md-3">
+                        <img class="img-item rounded-4" src="gb.jpg" alt="Second slide">
+                    </div>
+                    <div class="col-6 col-sm-6 col-md-3">
+                        <img class="img-item rounded-4" src="gb.jpg" alt="Second slide">
+                    </div>
+                    <div class="col-6 col-sm-6 col-md-3">
+                        <img class="img-item rounded-4" src="gb.jpg" alt="Second slide">
+                    </div>
+                    <div class="col-6 col-sm-6 col-md-3">
+                        <img class="img-item rounded-4" src="gb.jpg" alt="Second slide">
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <div class="row justify-content-center">
+                    <div class="col-6 col-sm-6 col-md-3">
+                        <img class="img-item rounded-4" src="gb.jpg" alt="Third slide">
+                    </div>
+                    <div class="col-6 col-sm-6 col-md-3">
+                        <img class="img-item rounded-4" src="gb.jpg" alt="Third slide">
+                    </div>
+                    <div class="col-6 col-sm-6 col-md-3">
+                        <img class="img-item rounded-4" src="gb.jpg" alt="Third slide">
+                    </div>
+                    <div class="col-6 col-sm-6 col-md-3">
+                        <img class="img-item rounded-4" src="gb.jpg" alt="Third slide">
+                    </div>
+                </div>
+            </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
+            <span class="sr-only">Next</span>
+        </a>
     </div>
 </div>
-
 </div>
 
   <footer>
