jo bhai carousel

--- a/index.html
+++ b/index.html
@@ -230,48 +230,48 @@
             <div class="carousel-item active">
                 <div class="row gap-0 row-gap-3 grid justify-content-center">
                     <div class="col-6 col-sm-6 col-md-3 g-col-6">
-                        <img class="img-item rounded-4" src="gb.jpg" alt="First slide">
+                        <img class="img-item rounded-4" src="assests/img/GV.webp" alt="First slide">
                     </div>
                     <div class="col-6 col-sm-6 col-md-3 g-col-6">
-                        <img class="img-item rounded-4" src="gb.jpg" alt="First slide">
+                        <img class="img-item rounded-4" src="assests/img/GV.webp" alt="First slide">
                     </div>
                     <div class="col-6 col-sm-6 col-md-3 g-col-6">
-                        <img class="img-item rounded-4" src="gb.jpg" alt="First slide">
+                        <img class="img-item rounded-4" src="assests/img/GV.webp" alt="First slide">
                     </div>
                     <div class="col-6 col-sm-6 col-md-3 g-col-6">
-                        <img class="img-item rounded-4" src="gb.jpg" alt="First slide">
+                        <img class="img-item rounded-4" src="assests/img/GV.webp" alt="First slide">
                     </div>
                 </div>
             </div>
             <div class="carousel-item">
                 <div class="row justify-content-center">
                     <div class="col-6 col-sm-6 col-md-3">
-                        <img class="img-item rounded-4" src="gb.jpg" alt="Second slide">
+                        <img class="img-item rounded-4" src="assests/img/GV.webp" alt="Second slide">
                     </div>
                     <div class="col-6 col-sm-6 col-md-3">
-                        <img class="img-item rounded-4" src="gb.jpg" alt="Second slide">
+                        <img class="img-item rounded-4" src="assests/img/GV.webp" alt="Second slide">
                     </div>
                     <div class="col-6 col-sm-6 col-md-3">
-                        <img class="img-item rounded-4" src="gb.jpg" alt="Second slide">
+                        <img class="img-item rounded-4" src="assests/img/GV.webp" alt="Second slide">
                     </div>
                     <div class="col-6 col-sm-6 col-md-3">
-                        <img class="img-item rounded-4" src="gb.jpg" alt="Second slide">
+                        <img class="img-item rounded-4" src="assests/img/GV.webp" alt="Second slide">
                     </div>
                 </div>
             </div>
             <div class="carousel-item">
                 <div class="row justify-content-center">
                     <div class="col-6 col-sm-6 col-md-3">
-                        <img class="img-item rounded-4" src="gb.jpg" alt="Third slide">
+                        <img class="img-item rounded-4" src="assests/img/GV.webp" alt="Third slide">
                     </div>
                     <div class="col-6 col-sm-6 col-md-3">
-                        <img class="img-item rounded-4" src="gb.jpg" alt="Third slide">
+                        <img class="img-item rounded-4" src="assests/img/GV.webp" alt="Third slide">
                     </div>
                     <div class="col-6 col-sm-6 col-md-3">
-                        <img class="img-item rounded-4" src="gb.jpg" alt="Third slide">
+                        <img class="img-item rounded-4" src="assests/img/GV.webp" alt="Third slide">
                     </div>
                     <div class="col-6 col-sm-6 col-md-3">
-                        <img class="img-item rounded-4" src="gb.jpg" alt="Third slide">
+                        <img class="img-item rounded-4" src="assests/img/GV.webp" alt="Third slide">
                     </div>
                 </div>
             </div>
