--- a/assests/pages/gallery.html
+++ b/assests/pages/gallery.html
@@ -20,20 +20,20 @@
 </head>
 
 <body>
-
   <nav class="navbar col-12 navbar-expand-lg bg-body-tertiary position-fixed">
-    <div class="container-fluid nav-contain d-flex">
-      <div class="position-relative d-flex">
-        <a class="navbar-brand" href="/index.html"><img
-            class="position-relative top-0 start-50 translate-middle-x col-lg-2 col-md-2 col-sm-2 col-3"
+    <div class="container-fluid nav-contain d-flex justify-content-center">
+      <div class="position-relative col-lg-3 d-flex">
+        <a class="navbar-brand ms-lg-auto col-md-5 col-6" href="index.html"><img
+            class="position-relative top-0 start-50 translate-middle-x col-lg-6 col-md-3 col-sm-4 col-5"
             src="/assests/img/Avsar-logo.png" alt="logo"></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
-          aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler col-md-10 col-6 position-relative end-0 collapsed" type="button"
+          data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown"
+          aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
       </div>
-      <div class="collapse navbar-collapse" id="navbarScroll">
-        <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+      <div class="navbar-collapse col-8 collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav m-auto my-2 my-lg-0 d-flex justify-content-center">
           <li class="nav-item">
             <a class="nav-link" href="/index.html">HOME</a>
           </li>
@@ -41,13 +41,13 @@
             <a class="nav-link" href="/assests/pages/about.html">ABOUT</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/assests/pages/gallery.html">GALLERY</a>
+            <a class="nav-link active"  aria-current="page"  href="/assests/pages/gallery.html">GALLERY</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/assests/pages/sponsors.html">SPONSORS</a>
           </li>
         </ul>
-        <a class="button type1 me-auto" href='/assests/pages/booking.html'>
+        <a class="button type1 m-lg-auto m-auto" href='/assests/pages/booking.html'>
           <span class="btn-txt">Get Pass</span>
         </a>
       </div>
