--- a/assests/pages/about.html
+++ b/assests/pages/about.html
@@ -152,7 +152,7 @@
       </div>
       
       <div class="card">
-        <img class="card-img" src="/assests/img/tushar.jpeg" alt="">
+        <img class="card-img" src="/assests/img/tushar.jpg" alt="">
         <h5 class="head-name">Tushar Shah</h5>
       </div>
 
